I hope register is finished now

--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,9 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20230227</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
-
     </dependencies>
 </project>
