--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,7 +21,7 @@ commands:
   setglobalspawn:
     description: Set the spawn location of players upon joining the server.
     aliases: setgspawn
-    permission: player.setglobalspawn
+    permission: admin.setglobalspawn
     permission-message: Nah mate, I don't think so. Ask an admin if you want to get your ass yeeted.
     tab-complete: 0
     usage: /setglobalspawn [toggle|invulnerability|(nothing)]
@@ -32,12 +32,22 @@ commands:
     usage: /login <password>
     permission-message: Somehow, you managed to fuck up the simplest part of the server. Good job.
 
+  testme:
+    description: test
+    tab-complete: 0
+    usage: /testme
+    permission: admin.testme
+    permission-message: Nah.
+
 
 permissions:
   player.register:
     description: Allows the player to register.
     default: true
 
-  player.setglobalspawn:
+  admin.setglobalspawn:
     description: Allows the admin to set login spawn.
+    default: op
+  admin.testme:
+    description: Allows the admin test.
     default: op
